# Zafaron

./: pyproject.toml
core/: settings.py  urls.py
zafaron/: apps.py  urls.py
