[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "drf-yasg>=1.21.11",
    "makefile>=1.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
